--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,6 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 waitress==3.0.2
 Werkzeug==3.1.5
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
